--- a/app/views/layouts/_navigation_links.haml
+++ b/app/views/layouts/_navigation_links.haml
@@ -1,4 +1,4 @@
 - if user_signed_in?
   %li= link_to "Przetestuj się", '#'
-  %li= link_to "Zarządzaj datami", '#'
+  %li= link_to "Zarządzaj datami", topics_path
   %li= link_to "Logout", destroy_user_session_path, :method => :delete
