translate to polish, space buttons

--- a/app/views/layouts/_navigation_links.haml
+++ b/app/views/layouts/_navigation_links.haml
@@ -1,4 +1,5 @@
 - if user_signed_in?
-  %li= link_to "Przetestuj się", '#'
   %li= link_to "Zarządzaj datami", topics_path
-  %li= link_to "Logout", destroy_user_session_path, :method => :delete
+  %li= link_to "Ucz się", '#'
+  %li= link_to "Zrób test", '#'
+  %li= link_to "Wyloguj się", destroy_user_session_path, :method => :delete
