--- a/app/views/topics/edit.html.haml
+++ b/app/views/topics/edit.html.haml
@@ -1,6 +1,6 @@
-%h1 Editing topic
+%h1 Edycja grupy wydarzeń
 
 = render 'form'
 
-= link_to 'Show', topic, class: "btn btn-primary"
-= link_to 'Back', topics_path, class: "btn btn-default"
+= link_to 'Pokaż', topic, class: "btn btn-primary spacious"
+= link_to 'Cofnij', topics_path, class: "btn btn-default spacious"
