--- a/app/views/topics/new.html.haml
+++ b/app/views/topics/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New topic
+%h1 Nowa grupa wydarzeń
 
 = render 'form'
 
-= link_to 'Back', topics_path, class: "btn btn-default"
+= link_to 'Cofnij', topics_path, class: "btn btn-default spacious"
