--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -1,12 +1,12 @@
 %h1
-  Grupa dat:
+  Grupa wydarzeń:
   = topic.name
 
 %h3= topic.description
 
-= link_to 'Edit', edit_topic_path(topic), class: "btn btn-warning"
-= link_to 'Back', topics_path, class: "btn btn-default"
-= link_to 'New Event', '#', class: "btn btn-success"
+= link_to 'Edytuj', edit_topic_path(topic), class: "btn btn-warning spacious"
+= link_to 'Cofnij', topics_path, class: "btn btn-default spacious"
+= link_to 'Nowe wydarzenie', '#', class: "btn btn-success spacious"
 
 %table.table.table-hover
   %thead
@@ -21,6 +21,6 @@
         %td= event.end_date
         %td= event.name
         %td
-          %span= link_to 'Show', '#', class: "btn btn-primary"
-          %span= link_to 'Edit', '#', class: "btn btn-warning"
-          %span= link_to 'Destroy', '#', :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger"
+          %span= link_to 'Pokaż', '#', class: "btn btn-primary"
+          %span= link_to 'Edytuj', '#', class: "btn btn-warning"
+          %span= link_to 'Usuń', '#', :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger"
