--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -23,4 +23,4 @@
         %td
           %span= link_to 'Pokaż', topic_event_path(topic, event), remote: true, class: "btn btn-primary show-event"
           %span= link_to 'Edytuj', edit_topic_event_path(topic, event), remote: true, class: "btn btn-warning edit-event"
-          %span= link_to 'Usuń', topic_event_path(topic, event), :method => :delete, :data => { :confirm => 'Are you sure?' }, remote: true, class: "btn btn-danger delete-event"
+          %span= link_to 'Usuń', topic_event_path(topic, event), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger delete-event"
