--- a/app/views/topics/show.html.haml
+++ b/app/views/topics/show.html.haml
@@ -16,11 +16,11 @@
       %th Zdarzenie
   %tbody
     - topic.events.each do |event|
-      %tr
+      %tr{id: event.id }
         %td= event.start_date
         %td= event.end_date
         %td= event.name
         %td
           %span= link_to 'Pokaż', topic_event_path(topic, event), remote: true, class: "btn btn-primary show-event"
           %span= link_to 'Edytuj', edit_topic_event_path(topic, event), remote: true, class: "btn btn-warning edit-event"
-          %span= link_to 'Usuń', topic_event_path(topic, event), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger delete-event"
+          %span= link_to 'Usuń', topic_event_path(topic, event), :method => :delete, :data => { :confirm => 'Are you sure?' }, remote: true, class: "btn btn-danger delete-event"
