--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,8 @@
     %title= content_for?(:title) ? yield(:title) : 'Date Learning Helper'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Date Learning Helper'}"}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application'
+    //, 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
     %header
