--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -53,3 +53,13 @@ section {
 span.button {
   margin: 5px;
 }
+
+.btn-test{
+  @extend .btn-info;
+  background-color: #6700BF;
+  border-color: #45007F;
+  &:hover {
+    background-color: #45007F;
+    border-color: #220040;
+  }
+}
