--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Ucz się
+%h1 Zrób test
 
 %table.table.table-hover
   %thead
@@ -10,6 +10,6 @@
       %tr
         %td= topic.name
         %td
-          %span= link_to 'Pokaż oś czasu', learning_path(topic), class: "btn btn-info"
-          %span= link_to 'Pokaż', topic, class: "btn btn-primary"
           %span= link_to 'Zrób test', test_path(topic), class: "btn btn-test"
+          %span= link_to 'Pokaż', topic, class: "btn btn-primary"
+          %span= link_to 'Pokaż oś czasu', learning_path(topic), class: "btn btn-info"
