--- a/app/views/tests/show.html.haml
+++ b/app/views/tests/show.html.haml
@@ -16,10 +16,10 @@
           = simple_form_for :answer, url: answer_path, remote: true do |f|
             .form-inputs
               .row
-                = f.input :start_date, label: 'Początek', as: :string, hint: 'Format: 01.01.2015', required: false, wrapper_html: { class: 'col-md-6' }
-                = f.input :end_date, label: 'Koniec', as: :string, hint: 'Format: 01.01.2015. Zostaw puste by zaznaczyć wydarzenie jednodniowe.', required: false, wrapper_html: { class: 'col-md-6' }
+                = f.input :start_date, label: 'Początek', as: :string, hint: 'Format: 01.01.2015.', required: false, wrapper_html: { class: 'col-md-6' }
+                = f.input :end_date, label: 'Koniec', as: :string, hint: 'Format: 01.01.2015. Puste pole: wydarzenie jednodniowe.', required: false, wrapper_html: { class: 'col-md-6' }
                 = f.input :question, as: :hidden, input_html: { value: event.id }
             .form-actions
               = f.submit 'Sprawdź odpowiedź', class: "btn btn-success"
 
-= link_to_next_page @events, 'Następne pytanie', class: 'btn btn-warning', params: { seed: params[:seed] }
+.next.hidden= link_to_next_page @events, 'Następne pytanie', class: 'btn btn-warning', params: { seed: params[:seed] }
