add progress bar on show test page

--- a/app/assets/stylesheets/tests.scss
+++ b/app/assets/stylesheets/tests.scss
@@ -3,10 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .event {
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 30px;
 }
 
 .hidden {
   display: none;
+}
+
+.question-progress{
+  margin-top: 30px;
 }
